--- a/css/phone-small.css
+++ b/css/phone-small.css
@@ -20,7 +20,7 @@
 }
 
 #services {
-  height: 981px;
+  height: fit-content;
   display: grid;
   grid-template-columns: repeat(auto, minmax(215px, 1fr));
   grid-auto-rows: auto;
