--- a/css/phone-small2.css
+++ b/css/phone-small2.css
@@ -19,7 +19,7 @@
 }
 
 #services {
-  height: 1202px;
+  height: fit-content;
   display: grid;
   grid-template-columns: repeat(auto, minmax(215px, 1fr));
   grid-auto-rows: auto;
