--- a/css/phone.css
+++ b/css/phone.css
@@ -137,7 +137,7 @@ html {
 
 /* Services Section */
 #services {
-  height: 929px;
+  height: fit-content;
   display: grid;
   grid-template-columns: repeat(auto, minmax(215px, 1fr));
   grid-auto-rows: auto;
